Small markdown spacing fix for paragraphs

--- a/codox.core/resources/codox/css/default.css
+++ b/codox.core/resources/codox/css/default.css
@@ -339,6 +339,10 @@ h4.deprecated {
     padding-bottom: 1em;
 }
 
+.markdown p:last-child {
+    margin-bottom: 0;
+}
+
 .public .markdown {
     padding-bottom: 0;
 }
